# Statki

./: App.cpp  App.h  Board.cpp  Board.h  CMakeLists.txt  ShootingBoard.cpp  ShootingBoard.h  ShowingBoard.cpp  ShowingBoard.h  Tile.cpp  Tile.h  main.cpp
